--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
         XXE via a crafted XML document, with resultant SSRF <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-18213">CVE-2019-18213</a> with <span style="color: #2ecc71">@TheZero</span>
 
+        JWT NULL signature attack <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-28042">CVE-2020-28042</a>
+
         <span style="color: #ff5f58">$</span> cat  <span style="color: #3498db">./</span>work<span style="color: #3498db">/</span>.history
 
         Penetration Tester @ Shielder Srl - 08/2019 - Current
