Added new CVE(s)

--- a/index.html
+++ b/index.html
@@ -25,9 +25,22 @@
 
         JWT NULL signature attack <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-28042">CVE-2020-28042</a>
 
+        QNAP Q'center Virtual Appliance < 1.12.1014 Stored XSS <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-TBA">CVE-2021-TBA</a>
+
+        QNAP QPKG Command Injection Remote Code Execution <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-TBA">CVE-2021-TBA</a>
+        <p class="redacted">TIM <span>random shit bruhhh</span> <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-TBA">CVE-2021-TBA</a></p>
+
         <span style="color: #ff5f58">$</span> cat  <span style="color: #3498db">./</span>work<span style="color: #3498db">/</span>.history
 
-        Penetration Tester @ Shielder Srl - 08/2019 - Current
+        Penetration Tester & Security Research @ Shielder Srl - 08/2019 - Current
+
+        Computer Systems and Networks Security Bachelor @ University of Milan - 09/2019 - Current
+
+        Industrial Technical Institute Diploma - Computer Specialist @ I.I.S. G.Vallauri
+
+        Internship @ Shielder Srl - 05/2018 - 07/2018
+
+        External IT Consultant @ Proton Srl - 01/2018 - 05/2018
 
     <span style="color: #ff5f58">$</span> cat <span style="color: #3498db">./</span>gpg<span style="color: #3498db">/</span>mykey.gpg
 
