--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
         JWT NULL signature attack <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-28042">CVE-2020-28042</a>
 
-        QNAP Q'center Virtual Appliance < 1.12.1014 Stored XSS <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-TBA">CVE-2021-TBA</a>
+        QNAP Q'center Virtual Appliance < 1.12.1014 Stored XSS <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-TBA">CVE-2021-28807</a>
 
-        QNAP QPKG Command Injection Remote Code Execution <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-TBA">CVE-2021-TBA</a>
-        <p class="redacted">TIM <span>random shit bruhhh</span> <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-TBA">CVE-2021-TBA</a></p>
+        QNAP QPKG Lack of signature lead to Remote Code Execution <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-28807">CVE-2021-28807</a>
+        <p class="redacted">TIM <span>random shit bruhhh</span> <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-TBA">CVE-2021-TBA</a></p>
 
         <span style="color: #ff5f58">$</span> cat  <span style="color: #3498db">./</span>work<span style="color: #3498db">/</span>.history
 
