--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
         QNAP Q'center Virtual Appliance < 1.12.1014 Stored XSS <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-28807">CVE-2021-28807</a>
 
-        QNAP QPKG Lack of signature lead to Remote Code Execution <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-28807">CVE-2021-28807</a>
+        QNAP Q’center Post-Auth Remote Code Execution via QPKG <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-28807">CVE-2021-28807</a>
         <p class="redacted">TIM <span>random shit bruhhh</span> <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-TBA">CVE-2021-TBA</a></p>
+        Mattermost Server v5.32 > v5.36 Reflected XSS in OAuth flow <a target="_blank" href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-37859">CVE-2021-37859</a>
 
         <span style="color: #ff5f58">$</span> cat  <span style="color: #3498db">./</span>work<span style="color: #3498db">/</span>.history
 
