deploy: zi0Black/blog-dev@ab14f14aa1aa0f076f6eb9cc7a7f7262db4c6906

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>zi0Black's Blog</title>
 <meta name=title content="zi0Black's Blog">
 <meta name=description content=":snowboarder:++ => :cake:++">
-<meta name=keywords content="markdown,syntax,">
+<meta name=keywords content="arm,baremetal,firmware,reversing,u-boot,">
 <meta property="og:title" content>
 <meta property="og:description" content=":snowboarder:++ => :cake:++">
 <meta property="og:type" content="website">
