deploy: zi0Black/blog-dev@103b1e0695d5315ec3ec6096f818a860ce208b04

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 <title>404</title>
 <meta name=title content="404 Page not found">
 <meta name=description content=":snowboarder:++ => :cake:++">
-<meta name=keywords content="arm,baremetal,firmware,reversing,u-boot,">
+<meta name=keywords content>
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content=":snowboarder:++ => :cake:++">
 <meta property="og:type" content="website">
