--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>zi0Black's Blog</title>
 <meta name=title content="zi0Black's Blog">
 <meta name=description content=":snowboarder:++ => :cake:++">
-<meta name=keywords content>
+<meta name=keywords content="auth,eclipse,jwt,mattermost,oauth,qcenter,qnap,qpkg,rce,servicestack,theia,vscode,vulnerability,xml,xss,xxe,">
 <meta property="og:title" content>
 <meta property="og:description" content=":snowboarder:++ => :cake:++">
 <meta property="og:type" content="website">
