deploy: zi0Black/blog-dev@2234321ed64f41df26b7ed337a17fe736678c5b2

--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 <p><a href=https://keybase.io/zi0black/key.asc>PGP-key</a></p>
 </main>
 <footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a>
+<script async defer src=https://scripts.simpleanalyticscdn.com/latest.js></script>
+<noscript><img src=https://queue.simpleanalyticscdn.com/noscript.gif alt referrerpolicy=no-referrer-when-downgrade></noscript>
 </footer>
 </body>
 </html>
