--- a/404.html
+++ b/404.html
@@ -34,6 +34,8 @@
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 </main>
 <footer>Made with <a href=https://github.com/janraasch/hugo-bearblog/>Hugo ʕ•ᴥ•ʔ Bear</a>
+<script async defer src=https://scripts.simpleanalyticscdn.com/latest.js></script>
+<noscript><img src=https://queue.simpleanalyticscdn.com/noscript.gif alt referrerpolicy=no-referrer-when-downgrade></noscript>
 </footer>
 </body>
 </html>
